<resources>
    <string name="app_name">SmartHouse</string>
    <string name="action_settings">Settings</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_favorite">action_favorite</string>
    <string name="selected_house_beacon_name">selected_house_beacon_name</string>
    <string name="view_all_beacons_dialog_message">Do you want to delete this beacon ? </string>
    <string name="view_all_beacons_dialog_title">Delete beacon</string>
    <string name="view_all_beacons_dialog_positive_button">Delete</string>
    <string name="view_all_beacons_dialog_negative_button">Cancel</string>
    <string name="google_signed_out">Signed out</string>
    <string name="google_sign_out">Sign Out</string>
    <string name="google_disconnect">Disconnect</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>
    <string name="room_number">Room number </string>
    <string name="delete_beacon_dialog_title">Do you want to delete this beacon ?</string>
    <string name="delete_conversation">Do you want to delete this conversation ?</string>
    <string name="change_activity">Change Activity</string>
    <string name="btn_tasks">Tasks</string>

    <string name="explanation">Enabled</string>
    <string name="my_assigned_tasks">My Assigned Tasks</string>
    <string name="all_tasks">All Tasks</string>
    <string name="my_tasks">My Tasks</string>
    <string name="task_description">Task Description</string>
    <string name="assign_task">Assign Task</string>
    <string name="date">Date</string>
    <string name="login">Login</string>
    <string name="add_task">ADD TASK:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nfc_start">NFC_START</string>
    <string name="nfc_activity">NFC_ACTIVITIES</string>
    <string name="music_player_frag">MUSIC_PLAYER_FRAG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sendNot">Send Notification</string>
    <string name="send_notification">SEND NOTIFICATION</string>
    <string name="let_members_know_that">Let members know that...</string>
    <string name="please_sign_in">Please sign in</string>
</resources>
