<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:src="@drawable/sh_banner">
        <!-- "Mark Favorite", should appear as action button if possible -->

        <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/activitys"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/action_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/view_conversations"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/action_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/activity_room_deciding"
        android:title="@string/action_favorite"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_dialog_map" />
    <item
        android:id="@+id/add_conv_add"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/action_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/activity_show_tasks"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/action_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/activity_notifications"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/action_favorite"
        app:showAsAction="always"/>
    <item xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/change_activity"
        android:title="@string/login"
        app:showAsAction="never"/>
        app:showAsAction="never"/>
    <item xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/house_settings"
            android:title="@string/action_settings"
            app:showAsAction="never"/>

        <!-- Settings, should always be in the overflow -->
</menu>