<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.pbkou.smarthouse.HouseSettings.Add_BeaconActivity">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/task_description"
        android:ems="10"
        android:id="@+id/add_task_body" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/users_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:orientation="vertical" />

    <ListView
        android:id="@+id/selected_users_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:orientation="vertical" />

    <Button
        android:text="@string/assign_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_task_btn" />

</LinearLayout>